Fix : Scrollbar glitch in mapdesigner

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,7 @@
 .grecaptcha-badge {
   visibility: hidden;
 }
+
+#root{
+  overflow-y: auto !important;
+}
