--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -121,7 +121,7 @@
     width: 100%;
     background-color: #363535;
     padding: 2px 2px;  
-    height: 6vh;
+    max-height: 6vh;
 }
 
 .infoIcon{
@@ -133,7 +133,7 @@
 
 .challName{
     margin-left: 10px; 
-    font-size: medium;
+    font-size: 0.8rem;
     background-color: transparent;
     color: #cbcbcb;
     overflow-x: clip;
@@ -194,7 +194,7 @@
     overflow-y: auto;
 }
 
-.editorContainer > * {
+.editorContainer > span{
     height: 100%;
 }
 
@@ -204,8 +204,8 @@
 }
 
 .editorContainer::-webkit-scrollbar-thumb{
-    background: rgba(255, 255, 255, 0.644);
-	border-radius: 10px;
+    background: rgba(255, 255, 255, 0.644) !important;
+	border-radius: 10px !important;
 }
 
 .rightPane {
