--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,6 +1,7 @@
 .mainContainer {
   max-width: 100%;
   overflow-x: hidden;
+  overflow-y: auto !important;
 }
 
 .jumbotron {
